FIX: margin around edit too small and causes UI problems with nav.

--- a/css/typography.css
+++ b/css/typography.css
@@ -303,7 +303,7 @@ table {
 
 /*! Edit Link */
 #edit-link {
-	margin: 7px 0;
+	margin: 30px 0;
 }
 	#edit-link p {
 		margin: 0;
